# Vector_DB_with_LLM

./: .coverage  .env  .gitignore  Dockerfile  README.md  app.py  config.yaml  create_virtual_env.sh  dev-requirements.txt  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run.sh  docker-tests.sh  gradio-start.sh  gradio_run.py  injector.py  jupyter-notebook.sh  main.py  pyproject.toml  pytest.sh  service-log.sh  service-start.sh
Data/: Sample.doc  Sample.hwp  Sample.xls  test  test1.txt
Gradio/RAG/: README.md  dev-requirements.txt
Gradio/RAG/src/: gradio_chatbot.py  model_setup.py  model_utils.py
Gradio/RAG/src/util/: conversation_rag.py  index.py
Langchain/: Huggigfase_Model_Download  Local_LLM  pdf_loader.py  text_loader.py  text_splitter.py
Langchain/VectorDB/: 랭체인_Elasticsearch_Vector.ipynb  랭체인_Faiss_Chroma.ipynb  랭체인_LLM.ipynb  랭체인_Recomendation.ipynb  랭체인_문서로더.ipynb  엘라스틱서치_벡터_쿼리_DSL_ESv.8.7
Langchain/multi_processing/: multi_processing_test.py  multi_threading_test.py
Langchain/runbook/: query_dsl
Langchain/workflow/: es_indexing_lanchain.py  es_utils.py  pdf_loader.py  search_engine.py  text_loader.py  text_splitter.py  vector_store.py
Langchain/workflow-test/: embedding.py  text_loader.py  vector_store.py
Langchain/workflow/.ipynb_checkpoints/: vector_store-checkpoint.py
Langchain/workflow/gradio/: gradio_run.py
Langchain/workflow/jupyter-workflow/: ChromaDB.ipynb  ChromaDB.py  es_langchain.ipynb  gradio_template.ipynb  langchain-similarity-search.ipynb  langchain_prometheus.ipynb  langchain_text_splitter.ipynb  langsmith_vector_workflow.ipynb
Langchain/workflow/jupyter-workflow/Faiss_vector/: index.faiss  index.pkl
Streamlit/: Streamlit_Chat.py  Streamlit_SimpleChat.py  streamlit-service.sh  streamlit-ui.sh
config/: log_config.py
controller/: cluster_controller.py  search_controller.py  vector_controller.py
data/: Sample.docx  test.txt  text1.txt
jupyter-workflow/: es_searchguard.ipynb  es_upgrade_index_validation_api.ipynb
repository/: schema.py
service/: es_search_handler.py
test-reports/junit/: pytest.xml
tests/: conftest.py  kibana_query  test_api.py  test_elasticsearch.py
tests/test_mapping/: search_ngram_mapping.json  search_ngram_mapping_v8.json
(+5 files in other folders)
